--- a/style/comments.css
+++ b/style/comments.css
@@ -1,3 +1,6 @@
+.add-your-review h3 {
+    font-size: 25px
+}
 .rating input[type="radio"] {
     display: none;
 }
@@ -5,6 +8,7 @@
 .rating label::before {
     content: "\f006";
     font: normal normal normal 20px/1px FontAwesome;
+    font-family: "Font Awesome 5 Free";
     vertical-align: middle;
     padding: 0 1px
 }
@@ -26,7 +30,7 @@
 
 .review-form .review-btn {
     background-color: #fff;
-    border-color: #b59759;
+    border-color: #7cbe49;
     border-width: 3px;
     font-size: 20px;
     cursor: pointer;
@@ -35,7 +39,7 @@
 }
 
 .review-form .review-btn:hover {
-    background-color: #b59759;
+    background-color: #7cbe49;
     color: #fff
 }
 
@@ -50,7 +54,7 @@
 }
 
 .review-form .image-review-style {
-    background-color: #b59759;
+    background-color: #7cbe49;
     color: #fff;
     cursor: pointer;
     padding: 3px 10px
@@ -59,6 +63,11 @@
 .review-form .image-review-style .fa {
     margin-left: 5px
 }
+
+.review-form textarea { 
+width: 100%;
+margin: 15px 0;
+ }
 
 .review-gallery img {
 	width: 100px;
