--- a/style/comments.css
+++ b/style/comments.css
@@ -1,14 +1,14 @@
 .add-your-review h3 {
-    font-size: 25px
+    font-size: 25px;
+    padding-bottom: 15px;
 }
 .rating input[type="radio"] {
     display: none;
 }
 .rating label { float: right }
 .rating label::before {
-    content: "\f006";
-    font: normal normal normal 20px/1px FontAwesome;
-    font-family: "Font Awesome 5 Free";
+    content: "\f005";
+    font: normal normal 400 20px/1px "Font Awesome 5 Free";
     vertical-align: middle;
     padding: 0 1px
 }
@@ -16,7 +16,8 @@
 .rating label.checked::before,
 .rating label.checked~label::before {
     color: #ffd700;
-    content: "\f005"
+    content: "\f005";
+    font-weight: 900
 }
 
 .rating label:hover,
@@ -24,22 +25,8 @@
     color: #ffd700;
 }
 
-.review-form .form-control {
-    height: 100%
-}
-
-.review-form .review-btn {
-    background-color: #fff;
-    border-color: #7cbe49;
-    border-width: 3px;
-    font-size: 20px;
-    cursor: pointer;
-    -webkit-transition: all 0.1s ease 0s;
-    transition: all 0.1s ease 0s
-}
-
 .review-form .review-btn:hover {
-    background-color: #7cbe49;
+    background-color: rgb(63, 121, 21);
     color: #fff
 }
 
@@ -64,9 +51,11 @@
     margin-left: 5px
 }
 
-.review-form textarea { 
-width: 100%;
-margin: 15px 0;
+.review-form input,
+.review-form textarea {
+    width: 100%;
+    margin: 15px 0;
+    padding: 5px 10px;
  }
 
 .review-gallery img {
@@ -77,7 +66,7 @@ margin: 15px 0;
 #reviews-list .fa-star { color: #b59759 }
 #reviews-list a.lightgallery img { padding: 2px }
 #reviews-list time { font-size: 75%; color: #b59759; padding-left: 5px }
-#reviews-list li.row { margin-bottom: 5px; border-bottom: 1px solid #b59759; padding-bottom: 5px }
+#reviews-list > div { margin-bottom: 5px; border-bottom: 1px solid #b59759; padding-bottom: 5px }
 
 #comment_add_success.alert-success {
     color: #155724;
