--- a/style/comments.css
+++ b/style/comments.css
@@ -68,6 +68,7 @@
 #reviews-list a.lightgallery img { padding: 2px }
 #reviews-list time { font-size: 75%; color: #b59759; padding-left: 5px }
 #reviews-list > div { margin-bottom: 5px; border-bottom: 1px solid #b59759; padding-bottom: 5px }
+#reviews-list .reply { margin-left: 50px; margin-top: 5px; border-top: 1px solid #7cbe49; padding-top: 5px }
 
 #comment_add_success.alert-success {
     color: #155724;
