--- a/app/services/cart/style/checkout.css
+++ b/app/services/cart/style/checkout.css
@@ -108,7 +108,7 @@
     50%{-ms-transform:scale(1.5);}
     100%{-ms-transform:scale(1);}
 }
-#cart #oferta i.far.fa-check-circle {
+#cart #oferta i.far.fa-square {
     color: #f52323;
     -webkit-animation-name: grow;
     -webkit-animation-duration: 3s;
