--- a/app/services/cart/style/cart.css
+++ b/app/services/cart/style/cart.css
@@ -11,7 +11,7 @@
 #cart .w30 input, #cart textarea, #cart select {
     height: auto;
     width: 100%;
-	background: #ddd !important;
+	/*background: #ddd !important;*/
 	border: none !important;
 	border-radius: 2px;
 	padding: 10px;
