--- a/app/services/cart/style/cart.css
+++ b/app/services/cart/style/cart.css
@@ -302,9 +302,24 @@ table.__cart_products_list .amount button.plusInCart i { margin-left: -4px }
 .table__cart_products_list2 .product-active.postpone:hover { background: #6ba53e; color: #fff }
 
 @media screen and (max-width: 600px) {
-	.table__cart_products_list2 .name { width: 42% }
-	.table__cart_products_list2 .amount { width: 20% }
-	.table__cart_products_list2 .sum, .table__cart_products_list2 .actions { width: 18% }
+	.table__cart_products_list2 .tr {
+		flex-direction: column;
+		flex-wrap: wrap;
+		justify-content: flex-start;
+		align-items: flex-start;
+		height: 85px;
+		position: relative;
+	}
+	.table__cart_products_list2 .photo { width: 20%; height: 100% }
+	.table__cart_products_list2 .name { width: 62% }
+	.table__cart_products_list2 .amount { width: 20%; padding: 0; height: 20px }
+	.table__cart_products_list2 .actions { width: 18%; height: 20px }
+	.table__cart_products_list2 .sum {
+		position: absolute;
+	    right: 5px;
+	    bottom: 5px;
+	    width: 18%; 
+	}
 	main.detal section.detal__info .info__price .card__check.detal__check input, .table__cart_products_list2 .amount input { width: 35px }
 	.table__cart_products_list2 .product-active {
 		margin-right: 0;
@@ -316,5 +331,10 @@ table.__cart_products_list .amount button.plusInCart i { margin-left: -4px }
 		height: 20px;
     	width: 25px;
     	margin-bottom: 2px;
+	}
+
+	#cart-product-delete {
+		left: 1%;
+		width: 98%;
 	}
 }
