--- a/app/services/cart/style/cart.css
+++ b/app/services/cart/style/cart.css
@@ -307,7 +307,8 @@ table.__cart_products_list .amount button.plusInCart i { margin-left: -4px }
 		flex-wrap: wrap;
 		justify-content: flex-start;
 		align-items: flex-start;
-		height: 85px;
+		min-height: 75px;
+    	max-height: 85px;
 		position: relative;
 	}
 	.table__cart_products_list2 .photo { width: 20%; height: 100% }
@@ -318,7 +319,7 @@ table.__cart_products_list .amount button.plusInCart i { margin-left: -4px }
 		position: absolute;
 	    right: 5px;
 	    bottom: 5px;
-	    width: 18%; 
+	    width: 65px; 
 	}
 	main.detal section.detal__info .info__price .card__check.detal__check input, .table__cart_products_list2 .amount input { width: 35px }
 	.table__cart_products_list2 .product-active {
