--- a/app/services/cart/style/cart.css
+++ b/app/services/cart/style/cart.css
@@ -307,18 +307,18 @@ table.__cart_products_list .amount button.plusInCart i { margin-left: -4px }
 		flex-wrap: wrap;
 		justify-content: flex-start;
 		align-items: flex-start;
-		min-height: 75px;
+		min-height: 68px;
     	max-height: 85px;
 		position: relative;
 	}
 	.table__cart_products_list2 .photo { width: 20%; height: 100% }
 	.table__cart_products_list2 .name { width: calc(80% - 70px) }
 	.table__cart_products_list2 .amount { width: 20%; padding: 0; height: 20px }
-	.table__cart_products_list2 .actions { width: 70px; height: 20px }
+	.table__cart_products_list2 .actions { width: 70px; height: 50px }
 	.table__cart_products_list2 .sum {
 		position: absolute;
 	    right: 5px;
-	    bottom: 5px;
+	    bottom: 0;
 	    width: 65px; 
 	}
 	main.detal section.detal__info .info__price .card__check.detal__check input, .table__cart_products_list2 .amount input { width: 35px }
