--- a/style/style.css
+++ b/style/style.css
@@ -901,6 +901,10 @@ main .main__logo a.active .fa-chevron-down {
     color: #82C166;
 }
 
+@media (max-width: 500px) {
+    main .main__logo a { width: 30%; margin-bottom: 10px; }
+}
+
 
 /*                        cars__detal                           */
 
