--- a/style/style.css
+++ b/style/style.css
@@ -254,8 +254,8 @@ section.sale .sale__wrrap {
 }
 .sale__card .card__img i.new__label {
     position: absolute;
-    top: 50px;
-    left: -16px;
+    top: 30px;
+    left: 0;
     transform: translateY(50%);
     font-weight: 600;
     color: #fff;
