--- a/style/style.css
+++ b/style/style.css
@@ -197,7 +197,6 @@ form button,
     cursor: pointer;
 }
 
-form button:hover,
 .btn:hover {
     background: #68a03d
 }
@@ -3092,10 +3091,12 @@ main.cars__manufacturers section.catalog__name div a figure img[src*="no_image2.
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding-top: 5px;
         }
 
         header img.header__logo {
-            width: 230px;
+            width: auto;
+            max-height: 25px;
             margin-right: 22px;
         }
 
@@ -3108,8 +3109,6 @@ main.cars__manufacturers section.catalog__name div a figure img[src*="no_image2.
         }
 
         header .mobile__shoping a.header__cart {
-            background-color: #fff;
-            border-radius: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -3138,9 +3137,9 @@ main.cars__manufacturers section.catalog__name div a figure img[src*="no_image2.
             background-color: #82C166;
         }
 
-        header .mobile__shoping .header__cart img {
+        /*header .mobile__shoping .header__cart img {
             padding: 10px;
-        }
+        }*/
 
         header div.flex .fa-bars {
             display: block;
@@ -3177,8 +3176,13 @@ main.cars__manufacturers section.catalog__name div a figure img[src*="no_image2.
 
         header form input {
             width: 100%;
-            margin-top: 10px;
             margin-left: 0;
+        }
+        header form .search-btn {
+            margin-top: 10px;
+        }
+        header #main-search.scrolled .search-btn {
+            margin-top: 0;
         }
 
         header .header__phone {
@@ -3303,13 +3307,23 @@ main.cars__manufacturers section.catalog__name div a figure img[src*="no_image2.
             display: block;
             position: fixed;
             z-index: 1002;
-            margin-left: -15px;
             top: 0;
+            left: -100%;
             width: 100vw;
-            background: rgba(0, 0, 0, .8);
+            height: 100vh;
+            overflow: scroll;
+            transition: all .3s;
+        }
+
+        header div.mob__menu.active {
+            left: 0;
+        }
+        header div.mob__menu.active .close__menu {
+            left: 0;
         }
 
         header div.mob__menu .close__menu {
+            left: 0;
             transition: .54s;
             width: 100%;
             height: 100vh;
@@ -3330,7 +3344,7 @@ main.cars__manufacturers section.catalog__name div a figure img[src*="no_image2.
             transition: .54s;
             left: -281px;
             position: absolute;
-            background: #3c3c3a;
+            background: #fff;
             width: 280px;
             min-height: 100vh;
         }
@@ -3339,9 +3353,13 @@ main.cars__manufacturers section.catalog__name div a figure img[src*="no_image2.
             font-size: 15px;
             padding: 8px 10px;
             margin: -1px 15px;
-            color: #fff;
+            color: #000;
             width: calc(100% - 30px);
             display: block;
+        }
+
+        header div.mob__menu .mob__nav a.pl-45 {
+            padding-left: 45px;
         }
 
         header div.mob__menu .mob__nav a img {
@@ -3351,7 +3369,7 @@ main.cars__manufacturers section.catalog__name div a figure img[src*="no_image2.
         header div.mob__menu .mob__nav a img.mob__logo {
             width: calc(100% - 30px);
             height: auto;
-            max-width: 200px;
+            max-width: 50%;
             margin: 15px 0;
         }
 
@@ -3367,7 +3385,7 @@ main.cars__manufacturers section.catalog__name div a figure img[src*="no_image2.
             position: fixed;
             top: 0;
             padding: 15px;
-            background: #777;
+            background: #fff;
             z-index: 11;
         }
 
@@ -3662,10 +3680,11 @@ main.cars__manufacturers section.catalog__name div a figure img[src*="no_image2.
         header .header__phone .header__login .header__user-in {
             font-size: 12px;
         }
-
         header img.header__logo {
-            width: 185px;
+            width: auto;
+            max-height: 25px;
             margin-right: 20px;
+            vertical-align: center;
         }
 
         header div.flex .fa-bars {
@@ -3673,9 +3692,9 @@ main.cars__manufacturers section.catalog__name div a figure img[src*="no_image2.
             height: 30px;
         }
 
-        header .mobile__shoping .header__cart img {
+        /*header .mobile__shoping .header__cart img {
             padding: 8px;
-        }
+        }*/
 
         main h1 {
             font-size: 21px;
@@ -3958,3 +3977,174 @@ textarea:active {
 .static_pages ol, .static_pages ul { margin: 10px 30px }
 .static_pages h3 { color: #666; font-size: 18px }
 .static_pages h2 { color: #666; font-size: 25px }
+
+
+.nav__mobile.default .header__link {
+    display: none;
+}
+
+
+@media (max-width: 426px) {
+    #main-search.scrolled {
+        position: fixed;
+        z-index: 99;
+        top: 15px;
+        left: 50%;
+        transform: translate(-50%, 0);
+        width: calc(100% - 110px);
+        margin-top: 0;
+    }
+    #main-search.scrolled input {
+        margin-top: 0;
+    }
+
+    header form .search-btn {
+        position: relative;
+    }
+    header form input {
+        border-radius: 10px;
+        height: 35px;
+        border: 1px solid #D1D1D1;
+    }
+    header form button {
+        height: 35px;
+        position: absolute;
+        right: 0;
+        top: 0;
+        color: #7D7D89;
+        background: #F1F1F9;
+        border-radius: 0 10px 10px 0;
+        border: 1px solid #D1D1D1;
+        border-left: 0;
+        padding: 0 17px;
+        font-weight: 600;
+    }
+    header form .btn:hover {
+        background: #68a03d
+    }
+
+    header div.mob__menu .mob__nav .login-wrapper > * {
+        display: inline-block;
+    }
+    header div.mob__menu .mob__nav .login-wrapper .inner-wrapper a {
+        display: inline-block;
+        width: fit-content;
+        margin: 0;
+        padding: 3px;
+    }
+    header div.mob__menu .mob__nav .login-wrapper {
+        margin-left: 25px;
+    }
+    .login-wrapper .inner-wrapper a:first-child:after {
+        content: "|";
+        margin-left: 10px;
+    }
+    header div.mob__menu .mob__nav .login-wrapper svg {
+        width: 22px;
+        height: 22px;
+        margin-bottom: -5px;
+        margin-right: 20px;
+    }
+    header div.mob__menu .mob__nav .lang-wrapper {
+        position: absolute;
+        top: 25px;
+        right: 15px;
+    }
+    header div.mob__menu .mob__nav .lang-wrapper .language {
+        display: flex;
+        align-items: center;
+    }
+    header div.mob__menu .mob__nav .lang-wrapper a {
+        padding: 0 8px;
+        width: auto;
+        margin: 0;
+    }
+    header div.mob__menu .mob__nav .lang-wrapper a {
+
+    }
+    header div.mob__menu .mob__nav .lang-wrapper a.active {
+        font-weight: 700;
+    }
+    header div.mob__menu .mob__nav .icon-wrapper svg {
+        height: 25px;
+        width: 25px;
+        margin-right: 10px;
+    }
+    header div.mob__menu .mob__nav .icon-wrapper {
+        display: flex;
+        align-items: center;
+    }
+    header div.mob__menu .mob__nav .logged-user {
+        display: flex;
+        align-items: center;
+    }
+    header div.mob__menu .mob__nav .logged-user svg {
+        height: 26px;
+        width: 26px;
+        margin-right: 10px;
+    }
+
+    .category-mobile-menu {
+        display: none;
+    }
+    .category-mobile-menu.active {
+        display: flex;
+    }
+
+    header div.mob__menu .mob__nav .category-mobile-menu a {
+        display: flex;
+        align-items: center;
+        position: relative;
+    }
+    header div.mob__menu .mob__nav .tab {
+        position: relative;
+    }
+    header div.mob__menu .mob__nav .category-mobile-menu a i,
+    header div.mob__menu .mob__nav .tab i{
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translate(0, -50%);
+        transition: all .3s;
+    }
+    header div.mob__menu .mob__nav .tab.active i,
+    header div.mob__menu .mob__nav .main__logo a.open i {
+        transform: translate(0, -50%) rotate(180deg);
+    }
+    header div.mob__menu .mob__nav .category-mobile-menu a .img-wrap {
+        width: 40px;
+        height: 25px;
+        margin-right: 10px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+    }
+    header div.mob__menu .mob__nav a .img-wrap img {
+        height: auto;
+        max-width: 100%;
+        width: auto;
+    }
+
+    header div.mob__menu .mob__nav a .logo__text {
+        font-size: 13px;
+        font-weight: 600;
+        color: #666;
+        text-transform: uppercase;
+        letter-spacing: 0.04em;
+    }
+    header div.mob__menu .mob__nav .detal__text {
+        font-size: 12px;
+        font-weight: 500;
+        text-transform: uppercase;
+        letter-spacing: 0.04em;
+        text-align: center;
+        color: #666666;
+    }
+    header div.mob__menu .mob__nav .base__detal img {
+        margin-right: 15px;
+        height: 20px;
+    }
+    header div.mob__menu .mob__nav section.cars__base a {
+        padding-left: 15px;
+    }
+}
